--- a/template/leaderboard.html
+++ b/template/leaderboard.html
@@ -63,7 +63,7 @@
             Top 100 Players
         </h1>
         <h5 class="row d-flex justify-content-center mt-2 text-secondary">
-            Last update: Feb 27, 2022 16:30PM (EST)
+            Last update: <span id="last_update"></span>
         </h5>
         <div class="container mt-5">
             <div class="row">
@@ -73,7 +73,7 @@
                 <div class="col-2"> Games </div>
             </div>
         </div>
-        <div class="container content shadow mt-1">
+        <div class="container content shadow mt-1" id="leaderboard_container">
             <div class="row">
                 <div class="col-1"> 100 </div>
                 <div class="col-2"> alanyevs </div>
