--- a/template/lobby.html
+++ b/template/lobby.html
@@ -97,7 +97,7 @@
         </div>
 
 
-        <div class="container content shadow mt-1">
+        <div class="container content shadow mt-1" id="lobby_container">
             <div class="row">
                 <div class="col-1"> 10086 </div>
                 <div class="col-2"> alanyevs </div>
