--- a/template/play.html
+++ b/template/play.html
@@ -21,6 +21,7 @@
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.js"></script>
     <script type="text/javascript" src="../static/all.js"></script>
+    <script type="text/javascript" src="../static/play.js"></script>
     <title>Play</title>
 </head>
 
