--- a/template/profile.html
+++ b/template/profile.html
@@ -62,26 +62,26 @@
         <div class="row mt-5">
             <div class="offset-1 col-2">
                 <img src="https://m.media-amazon.com/images/I/816p9XkbMQL._SL1427_.jpg" alt=""
-                    style="width: 100%; border-radius: 20%;">
+                    style="width: 100%; border-radius: 20%;" id="user_avatar">
             </div>
             <div class="col-4 mx-3">
                 <div class="row" style="height: 40px;"></div>
                 <div class="row">
-                    <h1>
+                    <h1 id="user_id">
                         alanyevs
                     </h1>
                 </div>
                 <div class="row mx-2">
-                    Winning rate: 30%
+                    <span> Winning rate: <span id="total_wr"></span> </span>
                 </div>
                 <div class="row mx-2">
-                    Games: 200
+                    <span> Games: <span id="games"></span> </span>
                 </div>
             </div>
             <div class="col-2 mx-5">
                 <div class="row" style="height: 20px;"></div>
                 <div class="row text-center" style="font-size: 50pt;">
-                    <p style="margin: 0;">17</p>
+                    <p style="margin: 0;" id="level">17</p>
                 </div>
                 <div class="row d-flex justify-content-center">
                     <button type="button" class="btn btn-outline-primary" style="width: 100px;">Share</button>
@@ -96,7 +96,7 @@
                         <div class="col-6 mx-auto my-auto">
                             <img src="../sucai/paper.svg" alt="paper" width="80%" height="150px">
                         </div>
-                        <div class="col-6 mx-auto my-auto" style="font-size: 50pt;">
+                        <div class="col-6 mx-auto my-auto" style="font-size: 50pt;" id="p_wr">
                             20%
                         </div>
                         <div class="row" style="height: 20px;"></div>
@@ -110,7 +110,7 @@
                         <div class="col-6  mx-auto my-auto">
                             <img src="../sucai/scissors.svg" alt="paper" width="80%" height="150px">
                         </div>
-                        <div class="col-6 mx-auto my-auto" style="font-size: 50pt;">
+                        <div class="col-6 mx-auto my-auto" style="font-size: 50pt;" id="s_wr">
                             20%
                         </div>
                         <div class="row" style="height: 20px;"></div>
@@ -124,7 +124,7 @@
                         <div class="col-6">
                             <img src="../sucai/rock.svg" alt="paper" width="80%" height="150px">
                         </div>
-                        <div class="col-6 mx-auto my-auto" style="font-size: 50pt;">
+                        <div class="col-6 mx-auto my-auto" style="font-size: 50pt;" id="r_wr">
                             20%
                         </div>
                         <div class="row" style="height: 20px;"></div>
@@ -137,7 +137,7 @@
                 <h2>Recent Games</h2>
             </div>
             <div class="row px-5">
-                <div class="container content shadow mt-1">
+                <div class="container content shadow mt-1" id="recent_container">
                     <div class="row">
                         <div class="col-1"> 100 </div>
                         <div class="col-2"> alanyevs </div>
