minor bug fixed

--- a/template/leaderboard.html
+++ b/template/leaderboard.html
@@ -62,8 +62,7 @@
         <h1 class="row display-5 d-flex justify-content-center mt-5">
             Top 100 Players
         </h1>
-        <h5 class="row d-flex justify-content-center mt-2 text-secondary">
-            Last update: <span id="last_update"></span>
+        <h5 class="row d-flex justify-content-center mt-2 text-secondary" id="last_update">
         </h5>
         <div class="container mt-5">
             <div class="row">
