--- a/template/leaderboard.html
+++ b/template/leaderboard.html
@@ -20,8 +20,27 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.css" rel="stylesheet" />
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.js"></script>
+
+    <script type="text/javascript" src="../static/sdk/lib/axios/dist/axios.standalone.js"></script>
+    <script type="text/javascript" src="../static/sdk/lib/CryptoJS/rollups/hmac-sha256.js"></script>
+    <script type="text/javascript" src="../static/sdk/lib/CryptoJS/rollups/sha256.js"></script>
+    <script type="text/javascript" src="../static/sdk/lib/CryptoJS/components/hmac.js"></script>
+    <script type="text/javascript" src="../static/sdk/lib/CryptoJS/components/enc-base64.js"></script>
+    <script type="text/javascript" src="../static/sdk/lib/url-template/url-template.js"></script>
+    <script type="text/javascript" src="../static/sdk/lib/apiGatewayCore/sigV4Client.js"></script>
+    <script type="text/javascript" src="../static/sdk/lib/apiGatewayCore/apiGatewayClient.js"></script>
+    <script type="text/javascript" src="../static/sdk/lib/apiGatewayCore/simpleHttpClient.js"></script>
+    <script type="text/javascript" src="../static/sdk/lib/apiGatewayCore/utils.js"></script>
+    <script type="text/javascript" src="../static/sdk/apigClient.js"></script>
+    <script type="text/javascript" src="../static/aws-sdk.min.js"></script>
+
+    <script>
+        var sdk = apigClientFactory.newClient({});
+    </script>
+
     <script type="text/javascript" src="../static/all.js"></script>
     <script type="text/javascript" src="../static/leaderboard.js"></script>
+
     <title>Leaderboard</title>
 </head>
 
@@ -67,26 +86,12 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-1"> Rank </div>
-                <div class="col-2"> User_ID </div>
-                <div class="col-2"> Winning Rate</div>
+                <div class="col-2"> User </div>
+                <div class="col-2"> Score </div>
                 <div class="col-2"> Games </div>
             </div>
         </div>
-        <div class="container content shadow mt-1" id="leaderboard_container">
-            <div class="row">
-                <div class="col-1"> 100 </div>
-                <div class="col-2"> alanyevs </div>
-                <div class="col-2"> 20% </div>
-                <div class="col-2"> 200 </div>
-            </div>
-            <div class="row">
-                <div class="col-1"> 100 </div>
-                <div class="col-2"> alanyevs </div>
-                <div class="col-2"> 20% </div>
-                <div class="col-2"> 200 </div>
-            </div>
-        </div>
-
+        <div class="container content shadow mt-1" id="leaderboard_container"></div>
     </div>
 
 </body>
