--- a/templates/create.html
+++ b/templates/create.html
@@ -1,11 +1,22 @@
 {% extends "layout.html" %}
 
-{% block head %} <title>Create Room</title> {% endblock %}
+{% block head %} 
+
+<script type="text/javascript" src="../static/create.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
+<script> let socket = io(); </script>
+<title>Create Room</title> 
+
+{% endblock %}
 
 {% block body %}
 
+<div class="col-md-6">
+    <div class="form"> <input type="text" class="form-control form-input" placeholder="Capacity" id="input">
+    </div>
+</div>
 <div class="container">
-    <button type="button" class="btn btn-primary">create</button>
+    <button type="button" class="btn btn-primary" id="createRoom">create</button>
 </div>
 
 {% endblock %}
