--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,8 @@
 
 {% block body %}
     <div class="container">
-        login
+        <a class="nav-link" href="/login">
+            Login
+        </a>
     </div>
 {% endblock %}
