--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,7 @@
 
     <script>
         var sdk = apigClientFactory.newClient({});
+        var UserID = "{{user_id}}";
     </script>
 
     <script type="text/javascript" src="../static/profile.js"></script>
