--- a/templates/room.html
+++ b/templates/room.html
@@ -21,8 +21,8 @@
     </h1>
     <div class="row mt-5">
         <div class="col-2 offset-6">
-            <button type="button" class="btn btn-outline-dark">Start</button>
-            <button type="button" class="btn btn-outline-dark">Exit</button>
+            <button type="button" class="btn btn-outline-dark" onclick="start_game()">Start</button>
+            <button type="button" class="btn btn-outline-dark" onclick="exit_game()">Exit</button>
         </div>
 
     </div>
