--- a/templates/create.html
+++ b/templates/create.html
@@ -14,12 +14,49 @@
 
 {% block body %}
 
-<div class="col-md-6">
+{# <div class="col-md-6">
     <div class="form"> <input type="text" class="form-control form-input" placeholder="Capacity" id="input">
     </div>
-</div>
+</div> #}
 <div class="container">
-    <button type="button" class="btn btn-primary" id="createRoom">create</button>
+    <h1 class="row display-5 d-flex justify-content-center mt-5">
+        Create Room
+    </h1>
+    <div class="row" style="height:30px;"></div>
+    <div class="row">
+        <div class="col-8 offset-2">
+        <form>
+            <div class="form-group">
+                <label for="input_roomname">Room Name</label>
+                <input class="form-control" id="input_roomname" placeholder="Room1">
+            </div>
+            <div class="form-group mt-3">
+                <label for="input_game_type">Game Type</label>
+                <select class="form-control" id="input_game_type">
+                    <option>Paper Scissors Rock</option>
+                    <option>More games incoming</option>
+                </select>
+            </div>
+            <div class="form-group mt-3">
+                <label for="input_capacity">Capacity</label>
+                <select class="form-control" id="input_capacity">
+                    <option>2</option>
+                </select>
+            </div>
+            <div class="form-group mt-3">
+                <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="input_private" disabled>
+                <label class="form-check-label" for="input_private">
+                    Private Room
+                </label>
+                </div>
+            </div>
+            <div class="mt-3">
+                <button type="button" class="btn btn-primary" id="createRoom">create</button>
+            </div>
+        </form>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
