--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,47 @@
 
 {% block body %}
     <div class="container">
-        <a class="nav-link" href="/login">
-            Login
-        </a>
+        <div class="row">
+            <div class="col-7">
+                <div class="row" style="height:100px"> </div>
+                <div class="row">
+                    <div class="col-9 offset-1">
+                        <img src="../static/sucai/home.png" alt="home" width="100%">
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="row" style="height:120px"> </div>
+                <div class="row" style="height:100px">
+                    <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" height="100%"
+                    alt="MDB Logo" id="logo"/>
+                </div>
+                <div class="row" style="height:80px"> </div>
+                <div class="row">
+                    <div class="col-8 offset-2">
+                        <button type="button" class="btn btn-primary" onclick="window.location.href='/lobby'" style="width: 100% !important; height:50px">
+                        Game</button>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-8 offset-2">
+                        <button type="button" class="btn btn-primary" onclick="window.location.href='/leaderboard'" style="width: 100% !important; height:50px">
+                        Leaderboard</button>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-8 offset-2">
+                        <button type="button" class="btn btn-primary" onclick="window.location.href='/profile'" style="width: 100% !important; height:50px">
+                        Profile</button>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-8 offset-2">
+                        <button type="button" class="btn btn-primary" onclick="window.location.href='/friend'" style="width: 100% !important; height:50px" disabled>
+                        Friend</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
