--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,11 +63,12 @@
                     <a class="nav-link" href="/friend">Friend</a>
                 </li>
             </ul>
+            
             <div class="d-flex align-items-center">
-                <!-- Avatar -->
                 <div class="dropdown mx-3">
+                    <a href="/profile">
                     <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" height="30"
-                        alt="Black and White Portrait of a Man" loading="lazy" id="avatar"/>
+                        alt="Black and White Portrait of a Man" loading="lazy" id="avatar"/></a>
                 </div>
             </div>
         </div>
