--- a/templates/profile.html
+++ b/templates/profile.html
@@ -50,7 +50,7 @@
                 <div class="row shadow">
                     <div class="row" style="height: 20px;"></div>
                     <div class="col-6 mx-auto my-auto">
-                        <img src="../sucai/static/paper.svg" alt="paper" width="80%" height="150px">
+                        <img src="../static/sucai/paper.svg" alt="paper" width="80%" height="150px">
                     </div>
                     <div class="col-6 mx-auto my-auto" style="font-size: 50pt;" id="p_wr">
                         20%
@@ -64,7 +64,7 @@
                 <div class="row shadow">
                     <div class="row" style="height: 20px;"></div>
                     <div class="col-6  mx-auto my-auto">
-                        <img src="../sucai/static/scissors.svg" alt="paper" width="80%" height="150px">
+                        <img src="../static/sucai/scissors.svg" alt="paper" width="80%" height="150px">
                     </div>
                     <div class="col-6 mx-auto my-auto" style="font-size: 50pt;" id="s_wr">
                         20%
