--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,7 +50,7 @@
                 aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
-            <a class="navbar-brand mt-2 mt-lg-0" href="./create.html">
+            <a class="navbar-brand mt-2 mt-lg-0" href="/">
                 <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" height="40"
                     alt="MDB Logo" id="logo"/>
             </a>
@@ -69,8 +69,8 @@
             <div class="d-flex align-items-center">
                 <div class="dropdown mx-3">
                     <a href="/profile">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" height="30"
-                        alt="Black and White Portrait of a Man" loading="lazy" id="avatar"/></a>
+                    <img src="../static/sucai/user0.png" class="rounded-circle" height="30"
+                        alt="" id="avatar"/></a>
                 </div>
             </div>
         </div>
