--- a/templates/layout.html
+++ b/templates/layout.html
@@ -68,8 +68,10 @@
             <div class="d-flex align-items-center">
                 <!-- Avatar -->
                 <div class="dropdown mx-3">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" height="30"
+                    <a href="/profile">
+                        <img src="static/sucai/avatars/IMG_1.jpg" class="rounded-circle" height="30"
                         alt="Black and White Portrait of a Man" loading="lazy" id="avatar"/>
+                    </a>
                 </div>
             </div>
         </div>
