--- a/templates/room.html
+++ b/templates/room.html
@@ -51,11 +51,12 @@
             <div class="row d-flex justify-content-center" style="height: 140px;">
                 <div class="rounded-circle shadow-lg p-0" style="width: 140px; height: 140px;">
                     <img src="../static/sucai/user0.png" alt="" 
-                style="width: 140px; height: 140px; border-radius: 50%; padding: 0;">
+                style="width: 140px; height: 140px; border-radius: 50%; padding: 0;"
+                class="room_player_avatar">
                 </div>
             </div>
             <div class="row text-center" style="height: 60px;">
-                <span style="font-size: 20pt;">Open</span>
+                <span style="font-size: 20pt;" class="room_player_name">Open</span>
             </div>
         </div>
         <div class="col-3">
@@ -63,11 +64,12 @@
             <div class="row d-flex justify-content-center" style="height: 140px;">
                 <div class="rounded-circle shadow-lg p-0" style="width: 140px; height: 140px;">
                     <img src="../static/sucai/user0.png" alt="" 
-                style="width: 140px; height: 140px; border-radius: 50%; padding: 0;">
+                style="width: 140px; height: 140px; border-radius: 50%; padding: 0;"
+                class="room_player_avatar">
                 </div>
             </div>
             <div class="row text-center" style="height: 60px;">
-                <span style="font-size: 20pt;">Open</span>
+                <span style="font-size: 20pt;" class="room_player_name">Open</span>
             </div>
         </div>
         <div class="col-3">
@@ -75,11 +77,12 @@
             <div class="row d-flex justify-content-center" style="height: 140px;">
                 <div class="rounded-circle shadow-lg p-0" style="width: 140px; height: 140px;">
                     <img src="../static/sucai/stop.png" alt="" 
-                style="width: 140px; height: 140px; border-radius: 50%; padding: 0;">
+                style="width: 140px; height: 140px; border-radius: 50%; padding: 0;"
+                class="room_player_avatar">
                 </div>
             </div>
             <div class="row text-center" style="height: 60px;">
-                <span style="font-size: 20pt;">Closed</span>
+                <span style="font-size: 20pt;" class="room_player_name">Closed</span>
             </div>
         </div>
         <div class="col-3">
@@ -87,11 +90,12 @@
             <div class="row d-flex justify-content-center" style="height: 140px;">
                 <div class="rounded-circle shadow-lg p-0" style="width: 140px; height: 140px;">
                     <img src="../static/sucai/stop.png" alt="" 
-                style="width: 140px; height: 140px; border-radius: 50%; padding: 0;">
+                style="width: 140px; height: 140px; border-radius: 50%; padding: 0;"
+                class="room_player_avatar">
                 </div>
             </div>
             <div class="row text-center" style="height: 60px;">
-                <span style="font-size: 20pt;">Closed</span>
+                <span style="font-size: 20pt;" class="room_player_name">Closed</span>
             </div>
         </div>
     </div>
