--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
 <div class="container">
     <div class="row mt-5">
         <div class="offset-1 col-2">
-            <img src="https://m.media-amazon.com/images/I/816p9XkbMQL._SL1427_.jpg" alt=""
+            <img src="../static/sucai/user0.png" alt=""
                 style="width: 100%; border-radius: 20%;" id="user_avatar">
         </div>
         <div class="col-4 mx-3">
