--- a/templates/profile.html
+++ b/templates/profile.html
@@ -40,7 +40,7 @@
                 <p style="margin: 0;" id="level">17</p>
             </div>
             <div class="row d-flex justify-content-center">
-                <button type="button" class="btn btn-outline-primary" style="width: 100px;">Share</button>
+                <button type="button" class="btn btn-outline-primary" style="width: 100px;" id="edit_btn">Edit</button>
             </div>
         </div>
     </div>
