--- a/templates/play.html
+++ b/templates/play.html
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </div>
-        <div class="mx-5 col-6 border border-2 border-dark rounded-9 shadow" id="me_action_container">
+        <div class="mx-5 col-6 border border-2 border-dark rounded-9 shadow" id="my_action_container">
             <div class="row" style="height: 20px;"></div>
             <div class="row">
                 <div class="col-4 option" id="paper_option" op="paper">
