add exit button

--- a/templates/room.html
+++ b/templates/room.html
@@ -5,6 +5,7 @@
     var sdk = apigClientFactory.newClient({});
     var GameID = "{{game_id}}";
     var UserID = "{{user_id}}";
+    var PlayerIDs = null;
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
 <script> let socket = io(); </script>
