end game with bug

--- a/templates/play.html
+++ b/templates/play.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %}
 
 {% block head %}
+    <script>
+        var sdk = apigClientFactory.newClient({});
+        var UserID = "{{user_id}}";
+    </script>
     <script type="text/javascript" src="../static/play.js"></script>
     <link rel="stylesheet" href="../static/play.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
@@ -59,7 +63,7 @@
             </div>
         </div>
         <div class="col-2">
-            <button type="button" class="btn btn-primary mt-4" onclick="" style="height:50px">Exit Game</button>
+            <button type="button" class="btn btn-primary mt-4" onclick="test_click()" style="height:50px">Exit Game</button>
         </div>
     </div>
     <div class="row mt-3" style="height: 200px;">
