--- a/templates/play.html
+++ b/templates/play.html
@@ -4,6 +4,8 @@
     <script>
         var sdk = apigClientFactory.newClient({});
         var UserID = "{{user_id}}";
+        var OpID = "{{op_id}}";
+        var Result = null;
     </script>
     <script type="text/javascript" src="../static/play.js"></script>
     <link rel="stylesheet" href="../static/play.css">
@@ -63,7 +65,7 @@
             </div>
         </div>
         <div class="col-2">
-            <button type="button" class="btn btn-primary mt-4" onclick="test_click()" style="height:50px">Exit Game</button>
+            <button type="button" class="btn btn-primary mt-4" onclick="EndGame('force_quit')" style="height:50px">Exit Game</button>
         </div>
     </div>
     <div class="row mt-3" style="height: 200px;">
