--- a/templates/profile.html
+++ b/templates/profile.html
@@ -95,10 +95,10 @@
         <div class="row px-5">
             <div class="container content shadow mt-1" id="recent_container">
                 <div class="row">
-                    <div class="col-1"> 100 </div>
+                    <!-- <div class="col-1"> Paper-Rock-Scissor </div>
                     <div class="col-2"> alanyevs </div>
-                    <div class="col-2"> 20% </div>
-                    <div class="col-2"> 200 </div>
+                    <div class="col-2"> 05/06/2022, 15:12 </div>
+                    <div class="col-2"> Win </div> -->
                 </div>
             </div>
         </div>
