--- a/templates/play.html
+++ b/templates/play.html
@@ -77,7 +77,7 @@
                 <div class="col-8 p-0" style="height: 100%;">
                     <div class="row d-flex justify-content-center" style="height: 140px;">
                         <div class="rounded-circle shadow-lg p-0" style="width: 140px; height: 140px;">
-                            <img src="https://m.media-amazon.com/images/I/816p9XkbMQL._SL1427_.jpg" alt="" 
+                            <img src="static/sucai/user0.png" alt="" 
                         style="width: 140px; height: 140px; border-radius: 50%; padding: 0;">
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                 <div class="col-8 p-0" style="height: 100%;">
                     <div class="row d-flex justify-content-center" style="height: 140px;">
                         <div class="rounded-circle shadow-lg p-0" style="width: 140px; height: 140px;">
-                            <img src="https://m.media-amazon.com/images/I/816p9XkbMQL._SL1427_.jpg" alt="" 
+                            <img src="static/sucai/user0.png" alt="" 
                         style="width: 140px; height: 140px; border-radius: 50%; padding: 0;">
                         </div>
                     </div>
