--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,7 +51,7 @@
                 <i class="fas fa-bars"></i>
             </button>
             <a class="navbar-brand mt-2 mt-lg-0" href="/">
-                <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" height="40"
+                <img src="static/sucai/logo.png" height="40"
                     alt="MDB Logo" id="logo"/>
             </a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -65,6 +65,8 @@
                     <a class="nav-link" href="/friend">Friend</a>
                 </li>
             </ul>
+
+            <a href="/logout"> log out </a>
             
             <div class="d-flex align-items-center">
                 <div class="dropdown mx-3">
