--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
             <div class="col-4">
                 <div class="row" style="height:120px"> </div>
                 <div class="row" style="height:100px">
-                    <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" height="100%"
+                    <img src="static/sucai/logo.png" height="100%"
                     alt="MDB Logo" id="logo"/>
                 </div>
                 <div class="row" style="height:80px"> </div>
