--- a/templates/play.html
+++ b/templates/play.html
@@ -105,7 +105,7 @@
         </div>
         <div class="col-10">
             <div class="progress" style="height: 30px;">
-                <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
         
