--- a/templates/play.html
+++ b/templates/play.html
@@ -84,11 +84,11 @@
                     <div class="row d-flex justify-content-center" style="height: 140px;">
                         <div class="rounded-circle shadow-lg p-0" style="width: 140px; height: 140px;">
                             <img src="static/sucai/user0.png" alt="" 
-                        style="width: 140px; height: 140px; border-radius: 50%; padding: 0;">
+                        style="width: 140px; height: 140px; border-radius: 50%; padding: 0;" id="op_avator">
                         </div>
                     </div>
                     <div class="row text-center" style="height: 60px;">
-                        <span style="font-size: 20pt;">alanyevs</span>
+                        <span style="font-size: 20pt;" id="op_name">alanyevs</span>
                     </div>
                 </div>
                 <div class="col-3 p-0 m-0" style="height: 100%;">
@@ -120,11 +120,11 @@
                     <div class="row d-flex justify-content-center" style="height: 140px;">
                         <div class="rounded-circle shadow-lg p-0" style="width: 140px; height: 140px;">
                             <img src="static/sucai/user0.png" alt="" 
-                        style="width: 140px; height: 140px; border-radius: 50%; padding: 0;">
+                        style="width: 140px; height: 140px; border-radius: 50%; padding: 0;" id="my_avator">
                         </div>
                     </div>
                     <div class="row text-center" style="height: 60px;">
-                        <span style="font-size: 20pt;">alanyevs</span>
+                        <span style="font-size: 20pt;" id="my_name">alanyevs</span>
                     </div>
                 </div>
                 <div class="col-3 p-0 m-0" style="height: 100%;">
