--- a/templates/login.html
+++ b/templates/login.html
@@ -16,8 +16,8 @@
             <div class="col-4">
                 <div class="row" style="height:160px"> </div>
                 <div class="row" style="height:100px">
-                    <img src="static/sucai/logo.png" height="250%"
-                    alt="MDB Logo" id="logo"/>
+                    <img src="static/sucai/logo.png" 
+                    alt="" id="logo"/>
                 </div>
                 <div class="row" style="height:150px"> </div>
                 <div class="row">
