--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,10 +35,10 @@
             </div>
         </div>
         <div class="col-2 mx-5">
-            <div class="row" style="height: 20px;"></div>
-            <div class="row text-center" style="font-size: 50pt;">
+            <div class="row" style="height: 60px;"></div>
+            {# <div class="row text-center" style="font-size: 50pt;">
                 <p style="margin: 0;" id="level">17</p>
-            </div>
+            </div> #}
             <div class="row d-flex justify-content-center">
                 <button type="button" class="btn btn-outline-primary" style="width: 100px;" id="edit_btn">Edit</button>
             </div>
