--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/all.css">
-    <!-- Font Awesome -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
@@ -66,16 +66,30 @@
                 </li>
             </ul>
 
-            <a href="/logout"> log out </a>
+
+            <div class="dropdown show">
+                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img src="../static/sucai/user0.png" class="rounded-circle" height="30"
+                        alt="" id="avatar"/>
+                </a>
+                
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="/profile">Profile</a>
+                    <a class="dropdown-item" href="/logout">Logout</a>
+                </div>
+            </div>
+
+            <div style="width: 15px;"></div>
             
-            <div class="d-flex align-items-center">
+            <!-- <div class="d-flex align-items-center">
                 <div class="dropdown mx-3">
                     <a href="/profile">
                     <img src="../static/sucai/user0.png" class="rounded-circle" height="30"
                         alt="" id="avatar"/>
                     </a>
                 </div>
-            </div>
+            </div> -->
+
         </div>
     </nav>
 
