--- a/templates/profile.html
+++ b/templates/profile.html
@@ -52,8 +52,8 @@
                     <div class="col-6 mx-auto my-auto">
                         <img src="../static/sucai/paper.svg" alt="paper" width="80%" height="150px">
                     </div>
-                    <div class="col-6 mx-auto my-auto" style="font-size: 50pt;" id="p_wr">
-                        20%
+                    <div class="col-6 mx-auto my-auto" style="font-size: 50pt;">
+                        <span> <span id="p_wr"></span>%</span> 
                     </div>
                     <div class="row" style="height: 20px;"></div>
                 </div>
@@ -66,8 +66,8 @@
                     <div class="col-6  mx-auto my-auto">
                         <img src="../static/sucai/scissors.svg" alt="paper" width="80%" height="150px">
                     </div>
-                    <div class="col-6 mx-auto my-auto" style="font-size: 50pt;" id="s_wr">
-                        20%
+                    <div class="col-6 mx-auto my-auto" style="font-size: 50pt;" >
+                        <span> <span id="s_wr"></span>%</span> 
                     </div>
                     <div class="row" style="height: 20px;"></div>
                 </div>
@@ -80,8 +80,8 @@
                     <div class="col-6">
                         <img src="../static/sucai/rock.svg" alt="paper" width="80%" height="150px">
                     </div>
-                    <div class="col-6 mx-auto my-auto" style="font-size: 50pt;" id="r_wr">
-                        20%
+                    <div class="col-6 mx-auto my-auto" style="font-size: 50pt;" >
+                        <span> <span id="r_wr"></span>%</span> 
                     </div>
                     <div class="row" style="height: 20px;"></div>
                 </div>
