--- a/templates/profile.html
+++ b/templates/profile.html
@@ -93,6 +93,14 @@
             <h2>Recent Games</h2>
         </div>
         <div class="row px-5">
+            <div class="container mt-2">
+                <div class="row">
+                    <div class="col-2"> Game </div>
+                    <div class="col-2"> Opponent </div>
+                    <div class="col-2"> Time </div>
+                    <div class="col-2"> Result </div>
+                </div>
+            </div>
             <div class="container content shadow mt-1" id="recent_container">
                 <div class="row">
                     <!-- <div class="col-1"> Paper-Rock-Scissor </div>
