removed friend; avatar resized

--- a/templates/home.html
+++ b/templates/home.html
@@ -32,24 +32,24 @@
                         Game</button>
                     </div>
                 </div>
-                <div class="row mt-3">
+                <div class="row mt-4">
                     <div class="col-8 offset-2">
                         <button type="button" class="btn btn-primary" onclick="window.location.href='/leaderboard'" style="width: 100% !important; height:50px">
                         Leaderboard</button>
                     </div>
                 </div>
-                <div class="row mt-3">
+                <div class="row mt-4">
                     <div class="col-8 offset-2">
                         <button type="button" class="btn btn-primary" onclick="window.location.href='/profile'" style="width: 100% !important; height:50px">
                         Profile</button>
                     </div>
                 </div>
-                <div class="row mt-3">
+                {# <div class="row mt-3">
                     <div class="col-8 offset-2">
                         <button type="button" class="btn btn-primary" onclick="window.location.href='/friend'" style="width: 100% !important; height:50px" disabled>
                         Friend</button>
                     </div>
-                </div>
+                </div> #}
             </div>
         </div>
     </div>
