--- a/templates/layout.html
+++ b/templates/layout.html
@@ -61,9 +61,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/leaderboard">Leaderboard</a>
                 </li>
-                <li class="nav-item">
+                {# <li class="nav-item">
                     <a class="nav-link" href="/friend">Friend</a>
-                </li>
+                </li> #}
             </ul>
 
 
